VQ-1653: Ablity to add and remove sorting from metrics & dimensions

--- a/src/app/features/reports-v2/criteria/criteria.component.html
+++ b/src/app/features/reports-v2/criteria/criteria.component.html
@@ -46,7 +46,7 @@
         <i 
           class="pi pi-times text-danger" 
           style="font-size: 0.8rem; cursor: pointer; padding-left: 1rem;"
-          (click)="removeSorting()"
+          (click)="removeSorting(criterion)"
         ></i>
       </span>
     </ng-container>
