--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
@@ -4,7 +4,7 @@
       <div class="row col-sm-12 mx-0">
         <div class="text-center col-sm-4"></div>
         <div class="text-center col-sm-4 col-12">
-          <input type="search" class="form-control" placeholder="Search">
+          <input type="search" class="form-control" placeholder="Search" (keyup)="filterDashboards($event)">
         </div>
         <div class="col-sm-4 col-12">
           <button class="btn btn-outline-primary float-end createDashBtn"
@@ -13,7 +13,12 @@
             </button>
         </div>
         <div class="row mx-0 mt-3 p-0 dragDropBoundary" cdkDropList (cdkDropListDropped)="drop($event)">
-          <div class="col-sm-4 mt-3 move" cdkDragBoundary=".dragDropBoundary" cdkDrag *ngFor="let dashboard of dashboards; let i = index">
+          <div 
+            class="col-sm-4 mt-3 move" 
+            cdkDragBoundary=".dragDropBoundary" 
+            cdkDrag 
+            *ngFor="let dashboard of filteredDashboards; let i = index"
+          >
             <div class="card">
               <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
               <div class="row card-header border-0 text-sm-start bg-transparent">
