--- a/src/app/features/lms/ind/components/proposal/components/summary/summary.component.html
+++ b/src/app/features/lms/ind/components/proposal/components/summary/summary.component.html
@@ -82,8 +82,8 @@ name="summary_view"
         </div>
       </div>
 
-      <div class="col-lg-6 col-sm-12 gap-above" *ngIf="proposalSummaryData?.premium">
-        <app-payment-option  [payment_details]=proposalSummaryData></app-payment-option>
+      <div class="col-lg-6 col-sm-12 gap-above" *ngIf="proposalSummaryData?.premium && client_info">
+        <app-payment-option  [payment_details]=proposalSummaryData [client]=client_info></app-payment-option>
       </div>
     </div>
     <div style="margin-bottom: 6rem"></div>
