--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -259,7 +259,7 @@
                         
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">Type: </span>
-                          <span class="fw-light">{{ beneficiary["type"] === "B" ? "Beneficairy" : "Trustee"  |uppercase}}</span>
+                          <span class="fw-light">{{ beneficiary["type"] === "B" ? "Beneficiary" : "Trustee"  |uppercase}}</span>
                         </div>
                       </div>
                     </div>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="col-12">
                       <div
-                      routerLink="/home/lms/ind/quotation/client-details"
+                      routerLink="/home/lms/ind/quotation/documents-upload"
                         class="fs-5 d-flex justify-content-end p-2"
                         style="color: var(--primary-color)"
                       >
