--- a/src/app/features/lms/ind/components/medicals/components/tests/tests.component.html
+++ b/src/app/features/lms/ind/components/medicals/components/tests/tests.component.html
@@ -17,10 +17,15 @@
           Policy Details
         </div>
 
-        <div  style="position: relative">
-          <ngx-spinner [name]="'medical_view'" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium"
-            bdColor="rgba(255, 255, 255, 0.966)"></ngx-spinner>
-
+        <div style="position: relative">
+          <ngx-spinner
+            [name]="'medical_view'"
+            type="ball-clip-rotate-multiple"
+            [fullScreen]="false"
+            color="#00529B"
+            size="medium"
+            bdColor="rgba(255, 255, 255, 0.966)"
+          ></ngx-spinner>
 
           <div
             class="d-flex justify-content-start px-4"
@@ -70,7 +75,8 @@
                 <div class="row">
                   <span class="text-gray col-md-5 col-sm-6">Cover From:</span>
                   <span class="text-black col-md-7 col-sm-6 fw-medium">{{
-                    policySummaryDetails?.endr_cover_to_date | date : "dd/MM/yyyy"
+                    policySummaryDetails?.endr_cover_to_date
+                      | date : "dd/MM/yyyy"
                   }}</span>
                 </div>
               </div>
@@ -78,7 +84,8 @@
                 <div class="row">
                   <span class="text-gray col-md-5 col-sm-6">Cover To:</span>
                   <span class="text-black col-md-7 col-sm-6 fw-medium">{{
-                    policySummaryDetails?.endr_cover_to_date | date : "dd/MM/yyyy"
+                    policySummaryDetails?.endr_cover_to_date
+                      | date : "dd/MM/yyyy"
                   }}</span>
                 </div>
               </div>
@@ -130,7 +137,7 @@
             </div>
           </div>
 
-          <div class="row px-4" [formGroup]=testForm>
+          <div class="row px-4" [formGroup]="testForm">
             <div
               class="d-flex justify-content-start fs-7 fw-medium text-black pt-2"
             >
@@ -168,12 +175,18 @@
             </div>
           </div>
 
-          <div class="row col-4 px-4">
+          <div class="row col-xl-4 col-lg-6 col-md-6 col-sm-12 col-xs-12 px-4">
             <div class="d-flex justify-content-start pt-2">Medical Tests</div>
 
             <div class="container mt-4" style="position: relative">
-              <ngx-spinner [name]="'test_view'" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium"
-                bdColor="rgba(255, 255, 255, 0.966)"></ngx-spinner>
+              <ngx-spinner
+                [name]="'test_view'"
+                type="ball-clip-rotate-multiple"
+                [fullScreen]="false"
+                color="#00529B"
+                size="medium"
+                bdColor="rgba(255, 255, 255, 0.966)"
+              ></ngx-spinner>
 
               <table class="table table-bordered">
                 <thead>
@@ -243,9 +256,6 @@
                             </ng-container>
                           </select>
                         </div>
-                        <!-- <div class="col-md-3 justify-content-end">
-                        <button (click)="selectTestForm(false)" type="submit" class="btn btn-primary">Save</button>
-                        </div> -->
                       </div>
 
                       <!-- Submit button -->
@@ -270,26 +280,51 @@
         <div class="d-flex justify-content-start pt-3 fs-6">
           Medical Reports
         </div>
-        <div class="row px-4 pt-2">
-          <div class="col-md-4 col-sm-12">
-            <div class="row py-0" *ngFor="let item of getListOfMedicalDocuments()">
-              <span class="col-md-6 col-sm-12" style="cursor:pointer" (click)="downloadReport(item)">{{item.document | titlecase}}</span>
-              <span class="text-black col-md-3 col-sm-12 fw-medium"
+        
+        
+        <div class="row px-4 pt-2" style="position: relative">
+          <ngx-spinner
+            [name]="'test_report_view'"
+            type="ball-clip-rotate-multiple"
+            [fullScreen]="false"
+            color="#00529B"
+            size="medium"
+            bdColor="rgba(255, 255, 255, 0.966)"
+          ></ngx-spinner>
+          <div class=" col-lg-4 col-md-4 col-sm-12">
+            <div
+              class="row py-2"
+              *ngFor="let item of getListOfMedicalDocuments()"
+            >
+              <span
+                class="col-lg-6 col-md-12 col-sm-12 medical"
+                style="cursor: pointer"
+                (click)="downloadReport(item)"
+                >{{ item.document | titlecase }}</span
+              >
+              <span style="cursor: pointer" class=" col-lg-3 col-md-12 col-sm-12 fw-medium medical-preview"
                 >Share <i class="fa-solid fa-share-nodes"></i
               ></span>
-              <span class="text-black col-md-3 col-sm-12 fw-medium"
+              <span style="cursor: pointer" (click)="downloadReport(item)"  class=" col-lg-3 col-md-12 col-sm-12 fw-medium medical-preview"
                 >Preview <i class="fa-regular fa-eye"></i
               ></span>
             </div>
-            <div class="row py-0">
-              <span class="col-md-6 col-sm-12">Medical Letter</span>
-              <span class="text-black col-md-3 col-sm-12 fw-medium"
-                >Share <i class="fa-solid fa-share-nodes"></i
-              ></span>
-              <span class="text-black col-md-3 col-sm-12 fw-medium"
-                >Preview <i class="fa-regular fa-eye"></i
-              ></span>
+          </div>
+          <div class="col-lg-8 col-md-8 col-sm-12"  *ngIf="filePath">
+            <div class="d-flex justify-content-center fw-bold py-2">
+              {{fileName | uppercase}}
             </div>
+            <div style="border: #313179 1px solid;">
+              <pdf-viewer
+              [src]="filePath"
+              [render-text]="true"
+              [original-size]="true"
+              [fit-to-page]="true"
+              style="width: 100%; height: 500px"
+            ></pdf-viewer>
+
+            </div>
+           
           </div>
         </div>
       </div>
