--- a/src/app/features/lms/ind/components/policy/components/exceptions/exceptions.component.html
+++ b/src/app/features/lms/ind/components/policy/components/exceptions/exceptions.component.html
@@ -1,9 +1,9 @@
-<div class="pt-2">
+<div class="">
   <div class="spinner" style="position: relative">
     <ngx-spinner name="exceptions" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
   
     <div class="d-flex justify-content-end">
-      <div class="b-r d-flex justify-content-center align-content-center">
+      <div class="b-r d-flex justify-content-center align-content-center" (click)="openModal()">
         <i class="fa-solid fa-plus" (click)="openModal()"></i>
       </div>
     </div>
@@ -85,7 +85,10 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item">Edit</a>
+                        <a class="dropdown-item">Approve</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" (click)="editException(rowIndex)">Edit</a>
                       </li>
                       <li (click)="deleteException(rowData)">
                         <a class="dropdown-item">Delete</a>
@@ -123,10 +126,10 @@
             <div class="col-md-6 col-sm-12">
               <div>
                 <label class="required">Exception Type</label>
-                <select formControlName="type" class="form-select">
-                  <ng-container *ngFor="let product of []">
-                    <option [value]="product['id']">
-                      {{ product?.description | lowercase }}
+                <select formControlName="le_code" class="form-select">
+                  <ng-container *ngFor="let exception of exceptionTypeList">
+                    <option [value]="exception['code']">
+                      {{ exception?.name | titlecase }}
                     </option>
                   </ng-container>
                 </select>
@@ -148,7 +151,7 @@
           <div class="d-flex justify-content-end pt-2" style="transform: translateX(0.4rem);">
             <button type="button" class="btn btn-danger m-1" data-bs-toggle="modal"
             data-bs-target="#UnderWritingExceptionModal" (click)="closeModal()" >Close</button>
-            <button type="button" class="btn btn-primary m-1"  (click) = saveException() [disabled]="!exceptionFormModal.invalid">save</button>
+            <button type="button" class="btn btn-primary m-1"  (click)="saveException()">save</button>
           </div>
         </div>
 
