--- a/src/app/features/lms/ind/components/policy/components/receipts/receipts.component.html
+++ b/src/app/features/lms/ind/components/policy/components/receipts/receipts.component.html
@@ -3,7 +3,7 @@
   <div class="spinner" style="position: relative">
     <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
   
-    <ng-container>
+    <ng-container *ngIf="quotationListInd?.rows.length>0">
       <p-table
         #dt1
         [lazy]="true"
@@ -55,6 +55,10 @@
         </ng-template>
       </p-table>
     </ng-container>
+    <div *ngIf="quotationListInd?.rows.length === 0" class="d-flex justify-content-center text-danger fw-bold">
+      No receipts record available!
+
+    </div>
   </div>
 
 </div>
