--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -34,7 +34,7 @@
           <p-columnFilter type="text" field="{{ col.field }}" display="menu"></p-columnFilter>
         </span>
           </th>
-          <th *ngIf="tableDetails?.url || tableDetails?.showCustomModalOnView">
+          <th *ngIf="tableDetails?.url || tableDetails?.showCustomModalOnView || tableDetails?.viewDetailsOnView">
             Actions
           </th>
         </tr>
@@ -56,7 +56,7 @@
               <i class="fa-regular fa-eye" style="font-size: 17px;"></i>
             </button>
           </td>
-          <td *ngIf="tableDetails?.showCustomModalOnView">
+          <td *ngIf="tableDetails?.viewDetailsOnView">
             <button type="button" class="btn btn-link actionbtn" (click)="viewDetailsById(rowData[tableDetails.urlIdentifier])">
               <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
             </button>
